--- a/weddingInvitation/index.html
+++ b/weddingInvitation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>蓝色古龙(杨一中)与皈依(张鹤)的婚礼</title>
+		<title>沈小发与陈沛旋的婚礼</title>
 		<meta charset="UTF-8">
 		<!-- 拉宽到真实宽度 -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
