--- a/weddingInvitation/index.html
+++ b/weddingInvitation/index.html
@@ -146,9 +146,9 @@
 		<div id="music" style="position: fixed;z-index: 10;right: 1rem;top: 1rem;">
 			<img id="musicOn" src="images/onMusic.png" style="display: block;" class="rotate" />
 			<img id="musicOff" src="images/offMusic.png" style="display: none;" />
-			<audio id="myaudio" loop="loop" preload="auto" autoplay="autoplay" src="music/方大同-特别的人.mp3">
-				<source src="music/方大同-特别的人.mp3" type="audio/ogg" />
-				<source src="music/方大同-特别的人.mp3" type="audio/mp3" />
+			<audio id="myaudio" loop="loop" preload="auto" autoplay="autoplay" src="music/SpecialPerson.mp3">
+				<source src="music/SpecialPerson.mp3" type="audio/ogg" />
+				<source src="music/SpecialPerson.mp3" type="audio/mp3" />
 			</audio>
 		</div>
 		<div id="bg">
