add google analytics

--- a/knifehit.html
+++ b/knifehit.html
@@ -19,6 +19,9 @@
         	transform: translate(-50%,-50%);
         }
     </style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S7VCTYENM"></script>
+	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-5S7VCTYENM');</script>
 </head>
 <body>
 <script src="js/knifehit.js"></script>	
