--- a/weddingInvitation02/index.htm
+++ b/weddingInvitation02/index.htm
@@ -171,6 +171,9 @@
     .icon-plumage:before { content: "\e600"; }
 
   </style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S7VCTYENM"></script>
+	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-5S7VCTYENM');</script>
 </head>
 <body>
     <div class="loadmore-loading" style="display: none;"><div></div><p></p></div>
