--- a/music.html
+++ b/music.html
@@ -8,6 +8,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title></title>
 		<link rel="stylesheet" href="css/music.css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S7VCTYENM"></script>
+		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-5S7VCTYENM');</script>
 	</head>
 
 	<body>
