--- a/jump-w/index.html
+++ b/jump-w/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=600, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>跳一跳 · jump</title>
   <script src="https://cdn.bootcss.com/phaser/2.6.2/custom/phaser-no-physics.min.js"></script>
   <script src="js/d.js"></script>
   <script src="js/app.js"></script>
