--- a/knifehit.html
+++ b/knifehit.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>飞刀游戏</title>
+	<link rel="icon" href="images/stormfa-icon.png" type="image/x-icon"/>
 	<script src="js/phaser3.min.js"></script>
 	<style type="text/css">       
         body{
