--- a/stormfa.html
+++ b/stormfa.html
@@ -5,12 +5,11 @@
 	<meta charset="UTF-8">
 	<title>Stormfa的个人主页</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa-icon.png" type="image/x-icon"
-	/>
-	<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+	<link rel="icon" href="images/stormfa-icon.png" type="image/x-icon"/>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S7VCTYENM"></script>
 	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-5S7VCTYENM');</script>
@@ -34,7 +33,6 @@
 	</section>
 
 	<section class="main-content">
-
 		<h3>
 			<a class="anchor" href="https://mp.weixin.qq.com/s?__biz=MzI0NjA5ODMzMA==&mid=2650413651&idx=1&sn=3a9422150dc498315d0fe3ee2028fea2&chksm=f14acaa6c63d43b066328d99896afa7dc0eda8ea57ac3fa9bcf258170233abd75f8e513596e8#rd"
 					aria-hidden="true" target="_blank" style="text-decoration:none;out-line: none;color: #159957;">
