--- a/music.html
+++ b/music.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title></title>
+		<link rel="icon" href="images/stormfa-icon.png" type="image/x-icon"/>
 		<link rel="stylesheet" href="css/music.css">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S7VCTYENM"></script>
