--- a/stormfa.html
+++ b/stormfa.html
@@ -27,7 +27,7 @@
 		    target="_blank" class="btn">公众号</a>
 		<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa%E5%B0%8F%E7%A8%8B%E5%BA%8F%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg"
 		    target="_blank" class="btn">小程序</a>
-		<a href="http://43.226.37.27:8084/stormfa.htm" target="_blank" class="btn">个人简历</a>
+		<a href="http://www.stormfa.cn/resume.html" target="_blank" class="btn">个人简历</a>
 		<a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzI0NjA5ODMzMA==&scene=126#wechat_redirect" target="_blank"
 		    class="btn">公众号文章</a>
 	</section>
