更新部分内容

--- a/stormfa.html
+++ b/stormfa.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Stormfa的个人主页</title>
+	<title>主页 | stormfa</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/stormfa-icon.png" type="image/x-icon"/>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
