--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,7 @@
 									<li>项目：<a href="http://aliyun-sz2.chewrobot.com/jiaoyoutianxia/shareChat.html?shareDialogsId=1&aipioneerUsername=3993906767&sendUserId=CF51F97488414CF2B4BA8CDE3C8D2E31">交游天下作品体验、分享页面（移动端）</a></li>
 									<li>项目：<a href="http://stormfa.cn/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
 									<li>项目：<a href="http://document.aliyun-sz3.chewrobot.com/login">对外文档中心（PC端）</a></li>
-									<li>项目：<a href="http://stormfa.cn/other/product-manager/index.html">PM工具导航页</a></li>
+									<li>项目：<a href="http://stormfa.cn/other/product-manager">PM工具导航页</a></li>
 								</ul>
 							</div>
 						</div>
@@ -412,7 +412,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="item">
+						<!-- <div class="item">
 							<header class="item-hd">
 								<span class="item-time">Cordova打包</span>
 								<a class="btn item-more" href="https://github.com/victor-fa/Cordova-Xunfei">项目
@@ -427,7 +427,7 @@
 									</li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</section>
 <!-- 
