--- a/stormfa.html
+++ b/stormfa.html
@@ -10,12 +10,28 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
 	<link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
+	<!-- live2d 开始 -->
+	<script src='live-2d/lib/live2d.min.js'></script>
+	<script src='live-2d/framework/Live2DFramework.js'></script>
+	<script src="live-2d/src/utils/MatrixStack.js"></script>
+	<script src="live-2d/src/utils/ModelSettingJson.js"></script>
+	<script src="live-2d/src/PlatformManager.js"></script>
+	<script src="live-2d/src/LAppDefine.js"></script>
+	<script src="live-2d/src/LAppModel.js"></script>
+	<script src="live-2d/src/LAppLive2DManager.js"></script>
+	<script src="live-2d/src/SampleApp1.js"></script>
+	<script src="live-2d/lib/jquery-1.7.2.min.js"></script>
+	<!-- live2d 结束 -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S7VCTYENM"></script>
 	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-5S7VCTYENM');</script>
 </head>
 
 <body>
+    <canvas id="glCanvas" width="200px" height="380px" style="position:fixed;left:0px;bottom:0px;"></canvas>
+    <script>
+        SampleApp1();
+    </script>
 	<iframe class="weather" scrolling="no" src="//tianqiapi.com/api.php?style=tf&skin=pitaya&color=FFFFFF" frameborder="0" width="160"
 	    height="24" allowtransparency="true">
 	</iframe>
@@ -143,6 +159,11 @@
 		</footer>
 
 	</section>
+	<script type="text/javascript">
+		if (document.body.offsetWidth < 1000) {
+				document.getElementById('glCanvas').style.display = "none";
+		}
+	</script>
 </body>
 
 </html>
