提交最新代码

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<p class="last-modified">最后更新于2018年9月</p>
+	<p class="last-modified">最后更新于2019年11月</p>
 	<main class="content">
 		<header class="content-hd">
 			<iframe class="weather" scrolling="no" src="//tianqiapi.com/api.php?style=tf&skin=pitaya&color=FFFFFF" frameborder="0" width="160" height="24" allowtransparency="true"></iframe>
@@ -113,7 +113,7 @@
 							<header class="item-hd">
 								<h3 class="item-name">人马互动科技有限公司</h3>
 								<span class="item-time">2018.09 至今</span>
-								<a class="btn item-more">工作</a>
+								<a class="btn item-more" href="https://qiwu.ai">工作</a>
 							</header>
 							<div class="item-bd">
 								<p class="item-des">于 前端团队参与公司多个项目研发，包括：
@@ -126,6 +126,7 @@
 									<li>项目：<a href="http://stormfa.cn/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
 									<li>项目：<a href="http://document.aliyun-sz3.chewrobot.com/login">对外文档中心（PC端）</a></li>
 									<li>项目：<a href="http://stormfa.cn/other/product-manager">PM工具导航页（PC端）</a></li>
+									<li>项目：<a href="https://sz1.fz-l.com/live2dDemo">Live2d虚拟声优（移动端）</a></li>
 								</ul>
 							</div>
 						</div>
@@ -170,7 +171,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="item">
+						<!-- <div class="item">
 							<header class="item-hd">
 								<h3 class="item-name">珠海远光软件股份有限公司</h3>
 								<span class="item-time">2016.07 至 2017.05</span>
@@ -185,7 +186,7 @@
 									<li>错题模块以及我的收藏模块开发</li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 						<!-- <div class="item">
 							<header class="item-hd">
 								<h3 class="item-name">学校工作室</h3>
@@ -225,7 +226,7 @@
 									<li>熟悉网页重构所需的CSS、SCSS</li>
 									<li>熟悉前端流行框架Angular、AngularJS</li>
 									<li>熟悉前后端分离开发方式、对接后台API</li>
-									<li>熟悉Bootstrap、ant-design、flex布局、</li>
+									<li>熟悉Bootstrap、ant-design、flex布局</li>
 								</ul>
 							</div>
 						</div>
@@ -479,7 +480,7 @@
 										<a href="https://www.cnblogs.com/">博客园</a>
 										等博客论坛</li>
 									<li>对下发的任务能清晰定位任务关键点并追踪任务进度</li>
-									<li>熟练 HTML，CSS，JavaScript，Ajax，Bootstrap</li>
+									<li>熟练 HTML，CSS，JavaScript，Ajax，Bootstrap，live2d</li>
 									<li>熟悉 Java基础，熟悉 Java语法，有良好的面向对象编程思想，能熟练的运用 Java进行项目开发</li>
 									<li>会使用 Spring，SpringMVC，Mybatis开发，遵守restful规范</li>
 									<li>不设限，前端变化特别快，只有保持不断学习才不会out</li>
