--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@
 									<li>项目：<a href="http://stormfa.cn/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
 									<li>项目：<a href="http://document.aliyun-sz3.chewrobot.com/login">对外文档中心（PC端）</a></li>
 									<li>项目：<a href="http://stormfa.cn/other/product-manager">PM工具导航页（PC端）</a></li>
-									<li>项目：<a href="https://sz1.fz-l.com/live2dDemo">Live2d虚拟声优（移动端）</a></li>
+									<li>项目：<a href="https://sz1.fz-l.com/live2dDemo">Live2d虚拟声优，uniapp框架开发（小程序）</a></li>
 								</ul>
 							</div>
 						</div>
