--- a/stormfa.html
+++ b/stormfa.html
@@ -146,8 +146,11 @@
 		<footer class="site-footer">
 			<span class="site-footer-owner">
 				<a href="stormfa.html" target="_blank">Website</a> is maintained by
-				<a href="https://github.com/victor-fa" target="_blank">victor-fa</a>.</span>
-
+				<a href="https://github.com/victor-fa" target="_blank">victor-fa</a>.
+			</span>
+			<span class="site-footer-owner">
+				<a href="http://beian.miit.gov.cn" target="_blank">粤ICP备【2019】 16028276号</a>
+			</span>
 		</footer>
 
 	</section>
