--- a/stormfa.html
+++ b/stormfa.html
@@ -46,7 +46,7 @@
 
 	<section class="main-content">
 		<h3>
-			<a class="anchor" href="https://mp.weixin.qq.com/s?__biz=MzI0NjA5ODMzMA==&mid=2650413651&idx=1&sn=3a9422150dc498315d0fe3ee2028fea2&chksm=f14acaa6c63d43b066328d99896afa7dc0eda8ea57ac3fa9bcf258170233abd75f8e513596e8#rd"
+			<a class="anchor" href="https://mp.weixin.qq.com/s/oJIgN_5Adyhcl5F9fzaCYg"
 					aria-hidden="true" target="_blank" style="text-decoration:none;out-line: none;color: #159957;">
 				<span aria-hidden="true" class="octicon octicon-link"></span>还在为无法随时在Console中调试而苦恼吗？
 			</a>
