--- a/axure/axure.html
+++ b/axure/axure.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Axure原型模板及Axure元件库原创作品，Axure原型设计教程分享，产品经理和交互设计师必备 - AxureUX</title>
+		<title>axure - AxureUX</title>
 		
 		<!--图标-->
 		<link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
