--- a/axure/axure.html
+++ b/axure/axure.html
@@ -4,25 +4,20 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>axure - AxureUX</title>
 		
-		<!--图标-->
 		<link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=1200, maximum-scale=1.0">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		
-		<!-- css代码 -->
 		<link href="./css/axure_rp_page.css" type="text/css" rel="stylesheet">
 		<link href="./css/styles.css" type="text/css" rel="stylesheet">
 		
-		<!-- js代码 -->
 		<script src="./js/jquery-1.7.1.min.js"></script>
 		<script src="./js/jquery-ui-1.8.10.custom.min.js"></script>
-		
 	</head>
 	<body>
 		<div id="base">
-
 			<div id="u0" class="ax_default" data-label="bg" style="left: -159.5px; width: 1519px; height: 760px; top: 0px;">
 				<div id="u0_state0" class="panel_state" data-label="1" style="width: 1519px; height: 760px;">
 					<div id="u0_state0_content" class="panel_state_content" style="margin-left: 159.5px;">
@@ -56,7 +51,7 @@
 								<img id="u5_img" class="img " src="./img/u5.png">
 								<div id="u5_text" class="text ">
 									<p><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#999999;">3号交流群：</span><span style="font-family:&#39;微软雅黑 Bold&#39;, &#39;微软雅黑 Regular&#39;, &#39;微软雅黑&#39;font-weight:700;">97052818</span></p>
-									<p><a id="u6" class="link" title="查看加验答案及其它交流群" tabindex="0" style="cursor: pointer;"><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#1ABC9C;">加验答案及其它交流群</span></a></p>
+									<p><a id="u6" class="link" tabindex="0" style="cursor: pointer;"><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#1ABC9C;">加验答案及其它交流群</span></a></p>
 								</div>
 							</div>
 
@@ -85,8 +80,8 @@
 							<div id="u12" class="ax_default">
 								<img id="u12_img" class="img " src="./img/u5.png">
 								<div id="u12_text" class="text ">
-									<p><span style="color:#FE9400;">关注获取产品经理福利礼包</span></p>
-									<p><span style="color:#999999;">微信搜索关注：</span><span style="color:#1ABC9C;">AxureUX</span></p>
+									<p><span style="color: #FE9400;">关注获取产品经理福利礼包</span></p>
+									<p><span style="color: #999999;">微信搜索关注：</span><span style="color:#1ABC9C;">AxureUX</span></p>
 								</div>
 							</div>
 
@@ -99,7 +94,7 @@
 							</div>
 						</div>
 
-						<div id="u15" class="ax_default" title="套餐及会员" style="cursor: pointer;">
+						<div id="u15" class="ax_default" title="加入会员" style="cursor: pointer;">
 							<div id="u15_div" tabindex="0"></div>
 							<div id="u15_text" class="text ">
 								<p style="font-size:20px;"><span style="font-family:&#39;微软雅黑 Bold&#39;, &#39;微软雅黑 Regular&#39;, &#39;微软雅黑&#39;font-weight:700;font-weight: bold;">加入会员</span></p>
@@ -115,33 +110,37 @@
 							</div>
 						</div>
 
-						<div id="u17" class="ax_default" data-label="套餐及会员">
+						<div id="u17" class="ax_default" data-label="加入会员">
 							<div id="u18_div"><img style="width: 30px;margin-top: 20px;" src="./img/u15.png"></div>
 						</div>
 
-						<div id="u18" class="ax_default" data-label="作品列表">
+						<div id="u18" class="ax_default" data-label="作品详情">
 							<div id="u18_div"><img style="width: 30px;margin-top: 20px;" src="./img/u16.png"></div>
 						</div>
 
-						<div id="u19" class="ax_default" title="作品列表" style="cursor: pointer;">
+						<div id="u19" class="ax_default" title="作品详情" style="cursor: pointer;">
 							<img id="u19_img" class="img " src="./img/u19.png" tabindex="0">
 							<div id="u19_text" class="text " style="top: 8px; transform-origin: 43px 27px;">
 								<p style="font-size:12px;"><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#CCCCCC;">付费作品</span></p>
-								<p style="font-size:28px;"><span style="font-family:&#39;微软雅黑 Bold&#39;, &#39;微软雅黑 Regular&#39;, &#39;微软雅黑&#39;font-weight:700;color:#FFFFFF;font-weight: bold;">19</span><span
-									 style="font-family:&#39;微软雅黑&#39;font-weight:400;font-size:12px;color:#FFFFFF;"> 套</span></p>
+								<p style="font-size:28px;">
+									<span style="font-family:&#39;微软雅黑 Bold&#39;, &#39;微软雅黑 Regular&#39;, &#39;微软雅黑&#39;font-weight:700;color:#FFFFFF;font-weight: bold;">19</span>
+									<span style="font-family:&#39;微软雅黑&#39;font-weight:400;font-size:12px;color:#FFFFFF;"> 套</span>
+								</p>
 							</div>
 						</div>
 
-						<div id="u20" class="ax_default" title="作品列表" style="cursor: pointer;">
+						<div id="u20" class="ax_default" title="作品详情" style="cursor: pointer;">
 							<img id="u20_img" class="img " src="./img/u19.png" tabindex="0">
 							<div id="u20_text" class="text " style="top: 8px; transform-origin: 43px 27px;">
 								<p style="font-size:12px;"><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#CCCCCC;">免费作品</span></p>
-								<p style="font-size:28px;"><span style="font-family:&#39;微软雅黑 Bold&#39;, &#39;微软雅黑 Regular&#39;, &#39;微软雅黑&#39;font-weight:700;color:#FFFFFF;font-weight: bold;">10</span><span
-									 style="font-family:&#39;微软雅黑&#39;font-weight:400;font-size:12px;color:#FFFFFF;"> 套</span></p>
+								<p style="font-size:28px;">
+									<span style="font-family:&#39;微软雅黑 Bold&#39;, &#39;微软雅黑 Regular&#39;, &#39;微软雅黑&#39;font-weight:700;color:#FFFFFF;font-weight: bold;">10</span>
+									<span style="font-family:&#39;微软雅黑&#39;font-weight:400;font-size:12px;color:#FFFFFF;"> 套</span>
+								</p>
 							</div>
 						</div>
 
-						<div id="u21" class="ax_default" title="套餐及会员" style="cursor: pointer;">
+						<div id="u21" class="ax_default" title="加入会员" style="cursor: pointer;">
 							<img id="u21_img" class="img " src="./img/u19.png" tabindex="0">
 							<div id="u21_text" class="text ">
 								<p style="font-size:12px;"><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#CCCCCC;">优惠套餐</span></p>
@@ -153,7 +152,7 @@
 							</div>
 						</div>
 
-						<div id="u22" class="ax_default" title="套餐及会员" style="cursor: pointer;">
+						<div id="u22" class="ax_default" title="加入会员" style="cursor: pointer;">
 							<img id="u22_img" class="img " src="./img/u19.png" tabindex="0">
 							<div id="u22_text" class="text ">
 								<p style="font-size:12px;"><span style="font-family:&#39;微软雅黑&#39;font-weight:400;color:#CCCCCC;">永久会员</span></p>
@@ -199,13 +198,12 @@
 				</div>
 			</div>
 
-			<!-- Unnamed -->
+			<!-- logo -->
 			<div id="u170" class="ax_default">
-				<img id="u170_img" class="img " src="./img/u170.svg">
+				<img id="u170_img" class="img" src="./img/u170.svg">
 			</div>
 
-			<!-- Unnamed -->
-			<div id="u167" class="ax_default" title="返回首页" style="cursor: pointer;">
+			<div id="u167" class="ax_default" style="cursor: pointer;">
 				<div id="u167_div" tabindex="0"></div>
 				<div id="u167_text" class="text ">
 					<p style="font-size:16px;"><span style="font-family:&#39;Arial Normal&#39;, &#39;Arial&#39;font-weight:400;">AxureUX.com</span></p>
@@ -214,7 +212,7 @@
 			</div>
 
 			<!-- 网站首页 -->
-			<div id="u160" class="ax_default" data-label="网站首页" title="网站首页" selectiongroup="u154menu" style="cursor: pointer;">
+			<div id="u160" class="ax_default" data-label="网站首页" selectiongroup="u154menu" style="cursor: pointer;">
 				<div id="u160_div" class="selected" tabindex="0"></div>
 				<div id="u160_text" class="text " style="left: 2px; width: 87px; top: 15px; transform-origin: 43.5px 25px;">
 					<p style="font-size:18px;">
@@ -237,8 +235,6 @@
 
 			<!-- 更多作品 -->
 			<div id="u159" class="ax_default" data-label="更多作品" title="更多作品" selectiongroup="u154menu" style="cursor: pointer;">
-				<!-- <div id="u159_div"><img style="width: 100%;" src="./img/u2.png"></div> -->
-				<!-- <div id="u159_div" tabindex="0"></div> -->
 				<div id="u159_text" class="text " style="top: 15px; transform-origin: 43px 25px;">
 					<p style="font-size:18px;">
 						<img style="width: 18px;" src="./img/u12.png">
@@ -264,8 +260,6 @@
           <p><span>相关推荐</span></p>
         </div>
       </div>
-			
-			
 			
 			<!-- 常用设备模板素材 开始 -->
 			<div id="u1594" class="ax_default" data-label="hot">
@@ -459,10 +453,6 @@
 					</div>
 				</div>
 			</div>
-			
-			
 		</div>
-
-
 	</body>
 </html>
