--- a/axure/axure.html
+++ b/axure/axure.html
@@ -164,7 +164,7 @@
 							</div>
 						</div>
 
-						<div id="u23" class="ax_default" data-label="hot" title="查看加群必读及交流礼仪" tabindex="0" style="cursor: pointer;">
+						<div id="u23" class="ax_default" data-label="hot" tabindex="0" style="cursor: pointer;">
 							<div id="u23_state0" class="panel_state" data-label="State1" style="">
 								<div id="u23_state0_content" class="panel_state_content">
 									<!-- Unnamed -->
