--- a/stormfa.html
+++ b/stormfa.html
@@ -41,12 +41,22 @@
 		<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa%E5%B0%8F%E7%A8%8B%E5%BA%8F%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg" target="_blank" class="btn">小程序</a>
 		<a href="resume.html" target="_blank" class="btn">个人简历</a>
 		<a href="music.html" target="_blank" class="btn">移动端音乐</a>
+		<a href="clock.html" target="_blank" class="btn">在线时钟</a>
 		<!-- <a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzI0NjA5ODMzMA==&scene=126#wechat_redirect" target="_blank" class="btn">公众号文章</a> -->
 	</section>
 
 	<section class="main-content">
+	
 		<h3>
-			<a class="anchor" href="https://mp.weixin.qq.com/s/oJIgN_5Adyhcl5F9fzaCYg"
+			<a class="anchor" href="http://stormfa.com/ugreen.html"
+					aria-hidden="true" target="_blank" style="text-decoration:none;out-line: none;color: #159957;">
+				<span aria-hidden="true" class="octicon octicon-link"></span>绿联网络私有云存储 家用NAS存储
+			</a>
+		</h3>
+		<p>绿联网络私有云存储是一款智能家庭数据管理中心，可供多人局域网及外网访问，多终端互联，随时随地访问NAS中的数据。绿联网络私有云存储可以让你的手机、平板，电脑等设备中的数据自动备份，7*24 小时远程控制下载，为你解决数据存储的烦恼。</p>
+		
+		<h3>
+			<a class="anchor" href="https://mp.weixin.qq.com/s?__biz=MzI0NjA5ODMzMA==&mid=2650413651&idx=1&sn=3a9422150dc498315d0fe3ee2028fea2&chksm=f14acaa6c63d43b066328d99896afa7dc0eda8ea57ac3fa9bcf258170233abd75f8e513596e8#rd"
 					aria-hidden="true" target="_blank" style="text-decoration:none;out-line: none;color: #159957;">
 				<span aria-hidden="true" class="octicon octicon-link"></span>还在为无法随时在Console中调试而苦恼吗？
 			</a>
@@ -146,11 +156,8 @@
 		<footer class="site-footer">
 			<span class="site-footer-owner">
 				<a href="stormfa.html" target="_blank">Website</a> is maintained by
-				<a href="https://github.com/victor-fa" target="_blank">victor-fa</a>.
-			</span>
-			<span class="site-footer-owner">
-				<a href="http://beian.miit.gov.cn" target="_blank">粤ICP备【2019】 16028276号</a>
-			</span>
+				<a href="https://github.com/victor-fa" target="_blank">victor-fa</a>.</span>
+
 		</footer>
 
 	</section>
