--- a/resume.html
+++ b/resume.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-	<p class="last-modified">最后更新于2019年11月</p>
+	<p class="last-modified">最后更新于2021年2月</p>
 	<main class="content">
 		<header class="content-hd">
-			<iframe class="weather" scrolling="no" src="//tianqiapi.com/api.php?style=tf&skin=pitaya&color=FFFFFF" frameborder="0" width="160" height="24" allowtransparency="true"></iframe>
+			<iframe class="weather" scrolling="no" src="//tianqiapi.com/api.php?style=tx&skin=pitaya&color=FFFFFF" frameborder="0" width="300" height="24" allowtransparency="true"></iframe>
 			<section class="title">
 				<div class="name">
 					<h1>沈小发</h1>
@@ -30,7 +30,7 @@
 
 			<section class="info">
 				<ul style="margin-top: 0.5rem;line-height: 1.4rem;">
-					<li>男 / 26岁</li>
+					<li>男 / 27岁</li>
 					<li>中山大学南方学院 · 计算机科学与技术</li>
 					<li>本科 / 2017年毕业</li>
 					<li>期望工作地点 / 深圳-南山区</li>
@@ -40,7 +40,7 @@
 			<section class="contact">
 				<ul>
 					<li>
-						<a href="http://www.stormfa.cn">
+						<a href="http://www.stormfa.com">
 							<span class="contact-link">个人主页</span>
 							<span class="iconfont">
 								<svg width="16px" height="16px" viewBox="0 0 1024 1024">
@@ -111,9 +111,27 @@
 					<div class="section-bd">
 						<div class="item">
 							<header class="item-hd">
+								<h3 class="item-name">深圳市绿联科技有限公司</h3>
+								<span class="item-time">2019.12 至今</span>
+								<a class="btn item-more">工作</a>
+							</header>
+							<div class="item-bd">
+								<p class="item-des">于 Nas个人存储团队参与公司绿联云项目研发，包括：</p>
+								<ul class="section-content">
+									<li>简介：围绕Nas个人存储业务，负责Nas的Windows桌面端开发（其它客户端Android、IOS、Mac）;</li>
+									<li>职责：根据Nas存储业务发展以及产品规划，攻坚开发难点、把控项目整体进度、及时发版提测；</li>
+									<li>模块：主要有登录、注册、上传下载任务管理、图片浏览、音频播放、在线视频播放、远程开机、用户权限管理、Samba服务、接入第三方内网穿透SDK、接入百度网盘SDK、electron-log日志系统等；</li>
+									<li>成就：从0到1参与项目开发，参与产品需求讨论，从1.0.0迭代到2.4.0，协助部门成员制定规范；</li>
+									<li>技术栈：Vue、Electron、IndexedDB、TypeScript、ant-design、chokidar、electron-log</li>
+									<li>目标：对标市面上主流Nas（联想Nas、海康威视Nas），争做用户体验最好的Nas。 </li>
+								</ul>
+							</div>
+						</div>
+						<div class="item">
+							<header class="item-hd">
 								<h3 class="item-name">人马互动科技有限公司</h3>
-								<span class="item-time">2018.09 至今</span>
-								<a class="btn item-more" href="https://qiwu.ai">工作</a>
+								<span class="item-time">2018.09 至 2019.12</span>
+								<a class="btn item-more">工作</a>
 							</header>
 							<div class="item-bd">
 								<p class="item-des">于 前端团队参与公司多个项目研发，包括：
@@ -123,10 +141,9 @@
 									<li>项目：<a href="https://qiwu.ai">齐悟B端官网（PC端+移动端）</a></li>
 									<li>项目：<a href="https://xiaowu.centaurstech.com/static/xiaowuShare.html ">你好小悟微信分享页面</a></li>
 									<li>项目：<a href="http://aliyun-sz2.chewrobot.com/jiaoyoutianxia/shareChat.html?shareDialogsId=1&aipioneerUsername=3993906767&sendUserId=CF51F97488414CF2B4BA8CDE3C8D2E31">交游天下作品体验、分享页面（移动端）</a></li>
-									<li>项目：<a href="http://stormfa.cn/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
+									<li>项目：<a href="http://stormfa.com/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
 									<li>项目：<a href="http://document.aliyun-sz3.chewrobot.com/login">对外文档中心（PC端）</a></li>
-									<li>项目：<a href="http://stormfa.cn/other/product-manager">PM工具导航页（PC端）</a></li>
-									<li>项目：<a href="https://sz1.fz-l.com/live2dDemo">Live2d虚拟声优，uniapp框架开发（小程序）</a></li>
+									<li>项目：<a href="http://stormfa.com/other/product-manager">PM工具导航页（PC端）</a></li>
 								</ul>
 							</div>
 						</div>
@@ -223,10 +240,11 @@
 							<div class="item-bd">
 								<ul class="section-content">
 									<li>熟悉JS基本语法与知识</li>
+									<li>熟悉Electron打包、调试，以及填坑方式</li>
 									<li>熟悉网页重构所需的CSS、SCSS</li>
-									<li>熟悉前端流行框架Angular、AngularJS</li>
+									<li>熟悉前端流行框架Vuejs、Angular、AngularJS</li>
 									<li>熟悉前后端分离开发方式、对接后台API</li>
-									<li>熟悉Bootstrap、ant-design、flex布局</li>
+									<li>熟悉Bootstrap、ant-design、elementUI、flex布局</li>
 								</ul>
 							</div>
 						</div>
@@ -267,7 +285,7 @@
 							<div class="item-bd">
 								<ul class="section-content">
 									<li>熟悉关系型非关系型数据库基本概念与SQL基本操作</li>
-									<li>熟悉MySQL、Oracle、MongoDB基本操作</li>
+									<li>熟悉MySQL、Oracle、IndexedDB、MongoDB基本操作</li>
 								</ul>
 							</div>
 						</div>
@@ -299,6 +317,31 @@
 					<div class="section-bd">Tips：以下是我的开源项目与总结，思路与细节请点击链接查看文档
 						<div class="item">
 							<header class="item-hd">
+								<span class="item-time">绿联云 Windows端</span>
+								<a class="btn item-more" href="http://stormfa.com/urgeen.html">项目</a>
+							</header>
+							<div class="item-bd">
+								<ul>
+									<li>
+										简介：围绕Nas个人存储业务，负责Nas的Windows桌面端开发（其它客户端Android、IOS、Mac）;
+									</li>
+									<li>
+										职责：根据Nas存储业务发展以及产品规划，攻坚开发难点、把控项目整体进度、及时发版提测；
+									</li>
+									<li>
+										模块：主要有登录、注册、上传下载任务管理、图片浏览、音频播放、在线视频播放、远程开机、用户权限管理、Samba服务、接入第三方内网穿透SDK、接入百度网盘SDK、electron-log日志系统等；
+									</li>
+									<li>
+										成就：从0到1参与项目开发，参与产品需求讨论，从1.0.0迭代到2.4.0，协助部门成员制定规范；
+									</li>
+									<li>
+										目标：对标市面上主流Nas（联想Nas、海康威视Nas），争做用户体验最好的Nas。 
+									</li>
+								</ul>
+							</div>
+						</div>
+						<!-- <div class="item">
+							<header class="item-hd">
 								<span class="item-time">餐饮行业 B端 C端</span>
 								<a class="btn item-more">项目</a>
 							</header>
@@ -319,12 +362,11 @@
 										通过
 										<a href="https://rxjs-dev.firebaseapp.com/">RxJS</a>以流的形式异步开发，提高开发效率、减少代码冗余</li>
 									<li>
-										<a href="https://lanhuapp.com/url/xOeG1">B端项目地址</a>,<!-- 密码:03rB -->
-										<a href="https://lanhuapp.com/url/ZoH12">C端项目地址</a><!-- 密码:ohkA --></li>
-										
+										<a href="https://lanhuapp.com/url/xOeG1">B端项目地址</a>,<!-- 密码:03rB
+										<a href="https://lanhuapp.com/url/ZoH12">C端项目地址</a><!-- 密码:ohkA</li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 						<div class="item">
 							<header class="item-hd">
 								<span class="item-time">微信开发</span>
@@ -471,16 +513,16 @@
 							</header>
 							<div class="item-bd">
 								<ul class="section-content">
-									<li>熟悉Angular6开发，熟悉VSCODE开发，有微信开发经验  </li>
-									<li>熟悉3大前端框架最难学习的 Angular，熟悉浏览器调试 </li>
+									<li>熟悉Vue.js开发，熟悉VSCODE、Hbuilder开发，有微信开发（uni-app）经验  </li>
 									<li>对前端技术有持续的热情，个性好，逻辑性强，善于和各种背景的人沟通合作</li>
-									<li>有问题先自己解决，通过GitHub看代码解决，经常逛
+									<li>遇到问题先自己解决，经常逛
+										<a href="https://www.gitHub.com/">GitHub</a>、
 										<a href="https://stackoverflow.com/">stackoverflow</a>、
 										<a href="https://www.csdn.net/">CSDN</a>、
 										<a href="https://www.cnblogs.com/">博客园</a>
 										等博客论坛</li>
 									<li>对下发的任务能清晰定位任务关键点并追踪任务进度</li>
-									<li>熟练 HTML，CSS，JavaScript，Ajax，Bootstrap，live2d</li>
+									<li>熟练 HTML，CSS，JavaScript，Ajax，Hybrid，live2d</li>
 									<li>熟悉 Java基础，熟悉 Java语法，有良好的面向对象编程思想，能熟练的运用 Java进行项目开发</li>
 									<li>会使用 Spring，SpringMVC，Mybatis开发，遵守restful规范</li>
 									<li>不设限，前端变化特别快，只有保持不断学习才不会out</li>
