修改错误信息

--- a/resume.html
+++ b/resume.html
@@ -144,7 +144,6 @@
 									<li>项目：<a href="http://stormfa.com/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
 									<li>项目：<a href="http://document.aliyun-sz3.chewrobot.com/login">对外文档中心（PC端）</a></li>
 									<li>项目：<a href="http://stormfa.com/other/product-manager">PM工具导航页（PC端）</a></li>
-									<li>项目：<a href="https://sz1.fz-l.com/live2dDemo">Live2d虚拟声优，uniapp框架开发（小程序）</a></li>
 								</ul>
 							</div>
 						</div>
@@ -319,7 +318,7 @@
 						<div class="item">
 							<header class="item-hd">
 								<span class="item-time">绿联云 Windows端</span>
-								<a class="btn item-more" href="http://stormfa.com/urgeen.html">项目</a>
+								<a class="btn item-more" href="http://stormfa.com/ugreen.html">项目</a>
 							</header>
 							<div class="item-bd">
 								<ul>
