--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<p class="last-modified">最后更新于2021年2月</p>
+	<p class="last-modified">最后更新于2021年4月</p>
 	<main class="content">
 		<header class="content-hd">
 			<iframe class="weather" scrolling="no" src="//tianqiapi.com/api.php?style=tx&skin=pitaya&color=FFFFFF" frameborder="0" width="300" height="24" allowtransparency="true"></iframe>
@@ -130,7 +130,7 @@
 						<div class="item">
 							<header class="item-hd">
 								<h3 class="item-name">人马互动科技有限公司</h3>
-								<span class="item-time">2018.09 至 2019.12</span>
+								<span class="item-time">2017.12 至 2019.12</span>
 								<a class="btn item-more">工作</a>
 							</header>
 							<div class="item-bd">
@@ -142,86 +142,10 @@
 									<li>项目：<a href="https://xiaowu.centaurstech.com/static/xiaowuShare.html ">你好小悟微信分享页面</a></li>
 									<li>项目：<a href="http://aliyun-sz2.chewrobot.com/jiaoyoutianxia/shareChat.html?shareDialogsId=1&aipioneerUsername=3993906767&sendUserId=CF51F97488414CF2B4BA8CDE3C8D2E31">交游天下作品体验、分享页面（移动端）</a></li>
 									<li>项目：<a href="http://stormfa.com/music.html">通过JSBridge与APP联调接入QQ音乐（移动端）</a></li>
-									<li>项目：<a href="http://document.aliyun-sz3.chewrobot.com/login">对外文档中心（PC端）</a></li>
 									<li>项目：<a href="http://stormfa.com/other/product-manager">PM工具导航页（PC端）</a></li>
 								</ul>
 							</div>
 						</div>
-						<div class="item">
-							<header class="item-hd">
-								<h3 class="item-name">微米智能(深圳)有限公司</h3>
-								<span class="item-time">2018.03 至 2018.09</span>
-								<a class="btn item-more">工作</a>
-							</header>
-							<div class="item-bd">
-								<p class="item-des">于 前端团队参与公司多个项目研发，包括：
-								</p>
-								<ul class="section-content">
-									<li>参与项目的前端架构以及技术选型</li>
-									<li>负责组件封装复用</li>
-									<li>负责新员工入门培训</li>
-									<li>项目：基于Angular6的智能语音交互APP</li>
-									<li>项目：餐饮行业 C端 微信服务号网页开发</li>
-									<li>项目：餐饮行业 B端 后台管理系统APP</li>
-									<li>项目：基于Angular5的官网项目</li>
-								</ul>
-							</div>
-						</div>
-						<div class="item">
-							<header class="item-hd">
-								<h3 class="item-name">广州联奕科技有限公司</h3>
-								<span class="item-time">2017.07 至 2018.02</span>
-								<a class="btn item-more" href="http://www.ly-sky.com/">工作</a>
-							</header>
-							<div class="item-bd">
-								<p class="item-des">于 教务组团队参与教务系统
-									</a>的前后端开发，包括：</p>
-								<ul class="section-content">
-									<li>
-										教务系统<a href="https://github.com/victor-fa/ly-cloud-teaching-cea-by-web">管理端</a>排课模块开发</li>
-									<li>
-										教务系统<a href="https://github.com/victor-fa/ly-cloud-teach-status-cea-ui">教师端</a>成绩录入模块开发</li>
-									<li>
-										教务系统<a href="https://github.com/victor-fa/ly-cloud-stu-status-cea-ui">学生端</a>选课模块开发以及前端框架搭建</li>
-									<li>
-										教务系统<a href="https://github.com/victor-fa/ly-cloud-choose-cea-ui">选课端</a>首页模块开发以及前端框架搭建</li>
-								</ul>
-							</div>
-						</div>
-						<!-- <div class="item">
-							<header class="item-hd">
-								<h3 class="item-name">珠海远光软件股份有限公司</h3>
-								<span class="item-time">2016.07 至 2017.05</span>
-								<a class="btn item-more" href="http://www.ygsoft.com/">工作</a>
-							</header>
-							<div class="item-bd">
-								<p class="item-des">于企业互联网团队参与
-									<a href="https://ke.qq.com/">微学习项目</a>的前端开发，包括：</p>
-								<ul class="section-content">
-									<li>基于 AngularJS 的 H5 APP开发</li>
-									<li>练习模块(包括顺序、随机、章节、强化)</li>
-									<li>错题模块以及我的收藏模块开发</li>
-								</ul>
-							</div>
-						</div> -->
-						<!-- <div class="item">
-							<header class="item-hd">
-								<h3 class="item-name">学校工作室</h3>
-								<span class="item-time">2015.06 ~ 2016.06</span>
-								<a class="btn item-more" href="http://www.nfu.edu.cn/">在校</a>
-							</header>
-							<div class="item-bd">
-								<p class="item-des">在校期间参加工作室，担任项目开发成员以及小组组长，其中包括：</p>
-								<ul class="section-content">
-									<li>
-										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/myself/%E7%A9%97%E6%B8%AFIT%E4%B8%89%E7%AD%89%E5%A5%96.jpg">比赛</a>2016穗港IT应用开发大赛三等奖</li>
-									<li>
-										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/myself/%E4%B8%89%E7%AD%89%E5%A5%96%E5%AD%A6%E9%87%91.jpg">奖学金</a>2015-2016获得学院奖学金</li>
-									<li>
-										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/myself/CET-4.jpg">CET-4</a>大学英语四级考试</li>
-								</ul>
-							</div>
-						</div> -->
 					</div>
 				</section>
 
@@ -248,18 +172,6 @@
 								</ul>
 							</div>
 						</div>
-						<!-- <div class="item">
-							<header class="item-hd">
-								<span class="item-time">React</span>
-								<a class="btn item-more">熟悉</a>
-							</header>
-							<div class="item-bd">
-								<ul class="section-content">
-									<li>用React开发大型复杂应用，熟知React原理与生态技术栈经验丰富</li>
-									<li>熟悉React调试、性能优化、同构、ReactNative等扩展技能</li>
-								</ul>
-							</div>
-						</div> -->
 						<div class="item">
 							<header class="item-hd">
 								<span class="item-time">微信开发</span>
@@ -274,18 +186,6 @@
 										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa%E5%85%AC%E4%BC%97%E5%8F%B7%E4%BA%8C%E7%BB%B4%E7%A0%81.png">stormfa</a>的后台接口</li>
 									<li>基于Java Web以及
 										<a href="https://res.wx.qq.com/open/js/jweixin-1.2.0.js">jweixin.js</a>，实现微信企业版网页开发</li>
-								</ul>
-							</div>
-						</div>
-						<div class="item">
-							<header class="item-hd">
-								<span class="item-time">数据库</span>
-								<a class="btn item-more">熟悉</a>
-							</header>
-							<div class="item-bd">
-								<ul class="section-content">
-									<li>熟悉关系型非关系型数据库基本概念与SQL基本操作</li>
-									<li>熟悉MySQL、Oracle、IndexedDB、MongoDB基本操作</li>
 								</ul>
 							</div>
 						</div>
@@ -329,10 +229,10 @@
 										职责：根据Nas存储业务发展以及产品规划，攻坚开发难点、把控项目整体进度、及时发版提测；
 									</li>
 									<li>
-										模块：主要有登录、注册、上传下载任务管理、图片浏览、音频播放、在线视频播放、远程开机、用户权限管理、Samba服务、接入第三方内网穿透SDK、接入百度网盘SDK、electron-log日志系统等；
+										模块：主要有登录、注册、上传下载任务管理、图片浏览、音频播放、在线视频播放、远程开机、用户权限管理、Samba服务、接入第三方内网穿透SDK、接入百度网盘SDK、接入迅雷下载、接入迅雷播放器、electron-log日志系统、sentry错误追踪系统等；
 									</li>
 									<li>
-										成就：从0到1参与项目开发，参与产品需求讨论，从1.0.0迭代到2.4.0，协助部门成员制定规范；
+										成就：从0到1参与项目开发，参与产品需求讨论，从1.0.0迭代到2.3.0，协助部门成员制定规范；
 									</li>
 									<li>
 										目标：对标市面上主流Nas（联想Nas、海康威视Nas），争做用户体验最好的Nas。 
@@ -340,140 +240,34 @@
 								</ul>
 							</div>
 						</div>
-						<!-- <div class="item">
+						<div class="item">
 							<header class="item-hd">
-								<span class="item-time">餐饮行业 B端 C端</span>
+								<span class="item-time">绿联生产测试软件</span>
 								<a class="btn item-more">项目</a>
 							</header>
 							<div class="item-bd">
 								<ul>
 									<li>
-										参与项目的前端架构以及技术选型；负责新员工入门培训；</li>
-									<li>
-										抽取公用组件以复用；svg 实现圆环进度条功能；</li>
-									<li>
-										负责B端首页以及订单卡片组件封装；负责C端订单生成；</li>
-									<li>
-										基于
-										<a href="https://github.com/angular/angular/tree/6.0.x">Andular6.0</a>框架， 遵守
-										<a href="https://www.angular.cn/">Angular官方文档</a>、 遵守
-										<a href="http://es6.ruanyifeng.com/">ECMAScript 6</a>开发方式</li>
-									<li>
-										通过
-										<a href="https://rxjs-dev.firebaseapp.com/">RxJS</a>以流的形式异步开发，提高开发效率、减少代码冗余</li>
-									<li>
-										<a href="https://lanhuapp.com/url/xOeG1">B端项目地址</a>,<!-- 密码:03rB
-										<a href="https://lanhuapp.com/url/ZoH12">C端项目地址</a><!-- 密码:ohkA</li>
-								</ul>
-							</div>
-						</div> -->
-						<div class="item">
-							<header class="item-hd">
-								<span class="item-time">微信开发</span>
-								<a class="btn item-more" href="https://mp.weixin.qq.com/wiki?t=resource/res_main&id=mp1445241432">项目</a>
-							</header>
-							<div class="item-bd">
-								<ul>
-									<li>
-										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa%E5%85%AC%E4%BC%97%E5%8F%B7%E4%BA%8C%E7%BB%B4%E7%A0%81.png">个人公众号开发</a>&nbsp;&nbsp;实现所有未认证的个人公众号接口权限</li>
-									<li>
-										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa%E6%B5%8B%E8%AF%95%E5%8F%B7%E5%85%AC%E4%BC%97%E5%8F%B7.jpg">企业公众号开发</a>&nbsp;&nbsp;调用微信接口文件jweixin.js的方法</li>
-									<li>
-										<a href="https://raw.githubusercontent.com/victor-fa/Stored-Picture/master/weixin/stormfa%E5%B0%8F%E7%A8%8B%E5%BA%8F%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg">微信小程序开发</a>&nbsp;&nbsp;开发stormfa个人小程序</li>
-								</ul>
-							</div>
-						</div>
-						<div class="item">
-							<header class="item-hd">
-								<span class="item-time">智能语音交互系统</span>
-								<a class="btn item-more">项目</a>
-							</header>
-							<div class="item-bd">
-								<ul>
-									<li>
-										参与项目的前端架构以及技术选型；负责新员工入门培训；</li>
-									<li>
-										基于
-										<a href="https://github.com/angular/angular/tree/6.0.x">Andular6.0</a>框架， 遵守
-										<a href="https://www.angular.cn/">Angular官方文档</a>、 遵守
-										<a href="http://es6.ruanyifeng.com/">ECMAScript 6</a>开发方式</li>
-									<li>
-										通过
-										<a href="https://rxjs-dev.firebaseapp.com/">RxJS</a>以流的形式异步开发，提高开发效率、减少代码冗余</li>
-									<li>
-										抽取公用组件以复用；svg 实现圆环进度条功能；</li>
-								</ul>
-							</div>
-						</div>
-						<div class="item">
-							<header class="item-hd">
-								<span class="item-time">中山大学教务系统</span>
-								<a class="btn item-more">项目</a>
-							</header>
-							<div class="item-bd">
-								<ul>
-									<li>
-										基于
-										<a href="https://github.com/angular/angular.js/tree/v1.7.x">AngularJS1.7</a>框架，
-										<a href="http://nginx.org/">Nginx</a>负责负载均衡， 其它
-										<a href="http://www.bootcss.com/">Bootstrap</a>、
-										<a href="https://jquery.com/">jQuery</a>
+										简介：围绕Nas硬件测试，开发适用于测试人员使用的自动化硬件测试软件;
 									</li>
 									<li>
-										基于
-										<a href="http://projects.spring.io/spring-cloud/">Spring Cloud</a>微服务框架， 遵守
-										<a href="http://www.restfulwebapis.org/">RESTful</a>规范实现接口</li>
-									<li>
-										数据库
-										<a href="https://www.oracle.com/index.html">Oracle</a>， 熟悉SQL基本操作、左右关联数据表等操作
+										职责：独立负责生产测试软件，攻坚开发难点，根据需求将软件开发完整；
 									</li>
 									<li>
-										调用
-										<a href="https://github.com/victor-fa/ly-cloud-teaching-cea-by-web/tree/master/vendor/angular/angular-file-upload">angular-file-upload</a>
-										第三方插件实现文件批量上传下载</li>
-								</ul>
-							</div>
-						</div>
-						<div class="item">
-							<header class="item-hd">
-								<span class="item-time">H5微学习项目</span>
-								<a class="btn item-more">项目</a>
-							</header>
-							<div class="item-bd">
-								<ul>
+										模块：主要有登录、注册、实时监测硬件状态、烧号、报告生成等；
+									</li>
 									<li>
-										基于
-										<a href="https://github.com/angular/angular.js/tree/v1.5.x">AngularJS 1.5</a>
-										，使用
-										<a href="https://jquery.com/">jQuery</a>
-										、
-										<a href="http://www.bootcss.com/">Bootstrap</a>库</li>
+										成就：从0到1参与项目开发，及时参与需求讨论，跟进迭代；
+									</li>
 									<li>
-										使用CSS+DIV布局，使用JavaScript实现动态效果，使用AJAX获取数据</li>
-									<li>
-										根据提供的UI实现具体页面，根据文档设计好路由以及请求接口</li>
-								</ul>
-							</div>
-						</div>
-						<!-- <div class="item">
-							<header class="item-hd">
-								<span class="item-time">Cordova打包</span>
-								<a class="btn item-more" href="https://github.com/victor-fa/Cordova-Xunfei">项目
-									<a>
-							</header>
-							<div class="item-bd">
-								<ul>
-									<li>
-										<a href="https://github.com/victor-fa/cordova-plugin-IFlyspeech-master">讯飞语音插件</a>
-										基于
-										<a href="https://cordova.apache.org/">Cordova</a>，通过cordova-plugin-IFlyspeech调用讯飞SDK， 打包成安卓APP
+										目标：提高硬件测试通过率，保证硬件生产质量。 
 									</li>
 								</ul>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</section>
-<!-- 
+
 				<section class="skill">
 					<header class="section-hd">
 						<span class="section-title-l"></span>
@@ -488,17 +282,14 @@
 							</header>
 							<div class="item-bd">
 								<ul class="section-content">
-									<li>对Ionic + Cordova打包成原生APP方向感兴趣</li>
-									<li>对ReactNative、Flutter打包成APP方向有浓厚兴趣</li>
-									<li>在小程序开发、公众号开发方向，始终坚持学习</li>
-									<li>对3D可视化的three.js技术有了解并认为是未来发展趋势</li>
-									<li>对前端组件化思想、PWA技术等有持续不断关注</li>
+									<li>研究Electron 调用各个 .dll 模块</li>
+									<li>研究C++ 与 Nodejs交互</li>
 								</ul>
 							</div>
 						</div>
 					</div>
 				</section>
- -->
+
 				<section class="skill">
 					<header class="section-hd">
 						<span class="section-title-l"></span>
@@ -522,6 +313,7 @@
 										<a href="https://www.cnblogs.com/">博客园</a>
 										等博客论坛</li>
 									<li>对下发的任务能清晰定位任务关键点并追踪任务进度</li>
+									<li>有较强的产品思维</li>
 									<li>熟练 HTML，CSS，JavaScript，Ajax，Hybrid，live2d</li>
 									<li>熟悉 Java基础，熟悉 Java语法，有良好的面向对象编程思想，能熟练的运用 Java进行项目开发</li>
 									<li>会使用 Spring，SpringMVC，Mybatis开发，遵守restful规范</li>
